Table overflow fixed

--- a/assets/css/manuals.css
+++ b/assets/css/manuals.css
@@ -59,3 +59,9 @@ a {
 }
 
 
+
+@media only screen and (max-width: 500px) {
+    .dropdown {
+        width: 90%;
+    }
+}
